--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
   * {
     margin: 0;
     padding: 0;
@@ -14,6 +12,10 @@
   width: 100%;
   height: 100%;
   overflow-x: hidden; 
+}
+
+body {
+  overflow-x: hidden;
 }
 
 
