--- a/src/components/gallery/enter/style.css
+++ b/src/components/gallery/enter/style.css
@@ -12,11 +12,11 @@
   );
 }
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 html,
 body,
@@ -25,10 +25,10 @@ body,
   height: 100%;
 }
 
-body {
+/* body {
   background-color: #121214;
   overflow: hidden;
-}
+} */
 
 #app {
   display: flex;
